overflow fixed, webpage tweaks, Footer finished,
#1: I found out that divs were not centered and were overflowing in width. changed the body to be 100% width. which fixes the issue for now and centers the webpage well.
  another thing is that most the footer webpages' divs were inefficiently centered, so I streamlined all of it as best I could; it's no fixed until a better idea can come up later

#2: I tweaked the sizes of the image-gallery and port-gallery to be now relatively sized instead of fixed so that they won't overflow out of their divs. Whatever centering issue I've seen previously has now been patched up in the previously mentioned entry.

#3: FOOTER CONTENT IS 80% IS FINISHED, ALL THAT REMAINS IS TO CHANGE THE PLACEHOLDER ICONS, INPUTTING LINKS, and maybe some patching of animations . but otherwise it is already finished

--- a/projHan_stylesheet.css
+++ b/projHan_stylesheet.css
@@ -1,29 +1,31 @@
 
 /* --------------GLOBAL STYLING---------------- */
 
+@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Roboto+Slab:wght@300&display=swap');
 html{
     scroll-behavior: smooth;
 }
 body{
     --textColor: rgb(245, 255, 247);
-    --bgColor1: rgb(14, 13, 20);
+    --bgColor1: rgb(15, 14, 19);
     --bgColor2: rgb(71, 70, 78);
     --bgColor3:rgb(27, 27, 27);
     --accentColor: orange;
 
     --bordProperties: solid 2px var(--bgColor1);
 
-    background-color: rgb(27, 27, 27);
+    background-color: var(--bgColor1);
     margin: 0;
     padding: 0;
 
     color: var(--textColor);
 
-    font-family: -apple-system, BlinkMacSystemFont, 
-    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 
-    'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Roboto Slab', serif;
 
     text-align: center;
+
+    height: 100%;
+    width: 100%;
 }
 h1{
     font-size: 60px;
@@ -31,11 +33,13 @@ h1{
 img{
     margin: 0;
 }
-
-/* -----------------GLOBAL CONTAINER STYLING-------------------- */
-
-.view-port{
-    margin: 0;
+p{
+    font-size: 18px;
+    word-spacing: 0.4em;
+}
+h1, h2, h3, h4, h5, h6{
+    font-family: 'Oswald', sans-serif;
+    letter-spacing: 0.1em;
 }
 
 /* -----------------NAVBAR STYLING------------------ */
@@ -106,6 +110,10 @@ img{
 
 }
 
+
+    .landing-text h1, .landing-text h2{
+        letter-spacing: 0.1em;
+    }
 /* --- custom hover text animation --- */
 .hover_head{
     margin-top: 1em;
@@ -125,7 +133,7 @@ img{
     }
         .hover_head span:hover{
             color: var(--accentColor);
-            letter-spacing: 3pt;
+            letter-spacing: 0.2em;
         }
         .landing h1, .landing h2{
             text-decoration: underline var(--textColor) 3px;
@@ -133,7 +141,7 @@ img{
         }
 
 .hero-banner{
-    background-image: url(./pictures/Camp3-2.png);
+    background-image: url(./pictures/wizardStudent.jpeg);
     
     display: grid;
 
@@ -149,25 +157,23 @@ img{
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position-x: center;
-    background-position-y: -35vh;
+    background-position-y: -50vh;
 
-    height: 35vh;
+    height: 32vh;
 }
 
 /* ----------------CONTENT STYLING----------------- */
 
 .content{
-    padding-top: 10vh;
-    padding-bottom: 10vh;
+    padding: 10vh 0vw 10vh;
 
     display: grid;
 
     grid-template-columns: 40vw 50vw;
 
-    align-items: center;
     justify-content: center;
-    align-content: center;
 
+    background-color: var(--bgColor3);
 }
     .altbg{
         background-color: var(--bgColor2);
@@ -176,6 +182,8 @@ img{
 .text-box{
     display: grid;
 
+   
+
     justify-content: center;
     align-items: center;
     align-content: center;
@@ -183,6 +191,8 @@ img{
 }
 .text{
     width: 25vw;
+
+    word-spacing: 5px;
 
     display: grid;
     text-align: justify;
@@ -206,7 +216,7 @@ img{
 /* --------- IMAGE GALLERY CSS ------------ */
 
 .image-gallery{
-    --gap: 20px;
+    --gap: 1.5vh;
     --num-col: 2;
     --row-height:35vh;
 
@@ -247,7 +257,7 @@ img{
     --row-height:70vh;
 
 
-    width: 50vw;
+    width: 100%;
 
     align-content: center;
     justify-content: center;
@@ -278,6 +288,13 @@ img{
 
 
 /* ---------- EMAIL FORM CSS ------------ */
+
+.contact-page{
+    padding: 10vh 0vw 10vh;
+
+    display: grid;
+    justify-content: center;
+}
 
 .email{
     width: 30vw;
@@ -316,6 +333,12 @@ img{
     line-height: 2.8em;
 
     text-align: left;
+}
+.text-form{
+    word-spacing: 0em;
+}
+.text-form h3 {
+    letter-spacing: 0.1em;
 }
 .alt-fi{
     display: inline-block;
@@ -365,72 +388,128 @@ button:hover{
 
     justify-items: center;
     align-items: center;
+    
 
     font-stretch: condensed;
-    margin: 10% 3% 2% ;
+    margin: 0% 3% 2% ;
 
 }
-.social-media{
+.footer-container{
+    width: 80vw;
+
     display: grid;
 
-    padding-top: 3vh;
+    justify-content: center;
 
+    align-content: end;
 }
-    .social-media ul{
-        
-        margin: 0%;
-        padding: 0%;
 
-        padding-top: 4%;
-    }
-    .social-media ul li{
-        list-style-type: none;
-        display: inline;
+.back-to-top-container{
+    display: grid;
 
-        padding-left: 2vw;
+    justify-content: center;
+}
+    .back-to-top{
+        margin: 8vh 0vw 0vh;
 
-
-        align-items: center;
+        width: fit-content;
 
     }
-    .social-media li:not(:first-child):before {
-        content: "/";
+        .back-to-top p{
+            font-size: 16px;
 
-        font-size: 600%;
+            
+            padding: 0;
+            margin: 0;
 
-        font-weight: lighter;
-        
-        padding-right: 2vw;
+            word-spacing: unset;
 
-        opacity: 50%;
-    }
-    .foot-links{
-        display: grid;
+            text-decoration: underline;
+            text-underline-offset: 2.75em;
+
+            transition: text-underline-offset cubic-bezier(0.175, 1.75, 0.32, 1.275) 0.25s;
+        }
+        .back-to-top p:hover{
+            text-underline-offset: 1em;
+        }
+        /* arrow_up styling and animations
+        .arrow-up{
+            scale: 125%;
+
+            opacity: 25%;
+        }
+        .arrow-up:hover{
+            opacity: 100%;
+        }
+        */
+
+.social-media{
+    padding-top: 3%;
+
+    display: grid;
+    width: 100%;
+    grid-template-columns: repeat(7, 1fr);
     
-        grid-template-columns: 1fr 1fr 2fr 1fr 1fr;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    }
+        .social-media p{
+            font-size: 100px;
+            opacity: 25%;
+        }
+        .social-media a{
+            opacity: 50%;
+
+            transition: opacity .25s;
+        }
+        .social-media a:hover{
+            opacity: 100%;
+        }
+
+.foot-links{
+        display: grid;
+        justify-content:center;
+
+        margin-top: 1%;
+
+        display: grid;
+
+        grid-template-columns: 1fr 1fr 8fr 1fr 1fr;
     
         width: 100%;
     
         grid-template-rows: 1fr;
     
-        align-items: center;
-    
-        justify-content:end;
-    
-        margin-top: 10%;
-    
+        align-items: end;
+        
     }
+        .foot-links a{
+            opacity: 50%;
+
+            transition: ease .045s;
+        }
+            .foot-links a:hover{
+                opacity: 100%;
+            }
     .footer a{
         text-decoration: none;
         color: var(--textColor);
-        opacity: 50%;
+        
     }
     .footer a:hover{
         opacity: 100%;
     }
+    
     .foot-link{
         font-weight: lighter;
+
+        letter-spacing: unset;
     }
-    .footer-logo{
-        font-size: 200%;
+    .foot-logo{
+        font-size: 2em;
+
+        margin-bottom: 2%;
+        letter-spacing: unset;
+        font-style: bold;
     }
